--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -280,10 +280,15 @@ Hero
   .hero-content {
     padding-top: 5%;
   }
-  .hero-content img {
-    width: 100%;
-    margin-bottom: 0%;
-  }
+  .hero-content{
+    img {
+      width: 100%;
+      margin-bottom: 0%;
+    }
+    .img-mobile{
+      display: none;
+    }
+  } 
 }
 .navigation {
   transition: all 300ms ease-in-out;
