--- a/css/queries.css
+++ b/css/queries.css
@@ -9,12 +9,20 @@
         width: 70%;
     }
 
-    .hero .hero-content .img-desktop{
+    .hero .img-desktop{
         display : block;
     }
 
-    .hero .hero-content .img-mobile{
+    .hero .img-mobile{
         display : none;
+    }
+
+    .logo{
+        display: inline-block;
+    }
+
+    .hero .hero-content {
+        padding-top:15%;
     }
 
 }
@@ -24,24 +32,32 @@
         padding-top:15%;
     }
 
-    .hero .hero-content .img-desktop{
+    .hero .img-desktop{
         display : block;
     }
 
-    .hero .hero-content .img-mobile{
+    .hero .img-mobile{
         display : none;
+    }
+
+    .logo{
+        display: inline-block;
     }
 }
 
 /* Responsive nav kicks in */
 @media screen and (max-width: 991px) {
 
-    .hero .hero-content .img-desktop{
+    .hero .img-desktop{
         display : block;
     }
 
-    .hero .hero-content .img-mobile{
+    .hero .img-mobile{
         display : none;
+    }
+
+    .logo{
+        display: none;
     }
 
     header {
@@ -50,7 +66,7 @@
     }
 
     .hero .hero-content {
-        padding-top:20%;
+        padding-top:15%;
     }
 
     .header-nav {
@@ -283,15 +299,19 @@
 
 @media screen and (max-width: 640px) {
     .hero .hero-content {
-        padding-top: 10%;
+        padding-top: 20%;
 
     }
-    .hero .hero-content .img-desktop{
+    .hero .img-desktop{
         display : none;
     }
 
-    .hero .hero-content .img-mobile{
+    .hero .img-mobile{
         display : block;
+    }
+
+    .logo{
+        display : none;
     }
 
     #eng-pics .img-wrap i {
@@ -334,12 +354,16 @@
     }
     
 
-    .hero .hero-content .img-desktop{
+    .hero .img-desktop{
         display : none;
     }
 
-    .hero .hero-content .img-mobile{
+    .hero .img-mobile{
         display : block;
+    }
+
+    .logo{
+        display : none;
     }
 
     .hero .btn {
@@ -402,14 +426,18 @@
         padding-top: 25%;
     }
 
-    .hero .hero-content .img-desktop{
+    .hero .img-desktop{
         display : none;
     }
 
-    .hero .hero-content .img-mobile{
+    .hero .img-mobile{
         display : block;
     }
 
+    .logo{
+        display : none;
+    }
+    
     .rsvp {
         padding-top: 20px;
     }
