--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -285,10 +285,13 @@ Hero
       width: 100%;
       margin-bottom: 0%;
     }
-    .img-mobile{
-      display: none;
-    }
+
   } 
+  
+  .img-mobile{
+    display: none;
+  }
+
 }
 .navigation {
   transition: all 300ms ease-in-out;
@@ -319,9 +322,7 @@ header {
       margin-right: 20px;
     }
   }
-  .logo {
-    display: inline-block;
-  }
+
   .logo img {
     height: 19px;
   }
@@ -826,7 +827,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, .fa-hand-dots, .fa-shrimp, .fa-children {
         font-size: 14px;
         position: absolute;
         top: 50%;
