--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -827,7 +827,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, .fa-hand-dots, .fa-shrimp, .fa-children {
+      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, .fa-hand-dots, .fa-shrimp, .fa-children, .fa-music {
         font-size: 14px;
         position: absolute;
         top: 50%;
