Music form + style fixes (#4)

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -323,9 +323,13 @@ header {
     }
   }
 
-  .logo img {
-    height: 19px;
+  .logo{
+    display: inline-block;
+    img {
+      height: 19px;
+    }
   }
+
   ul.primary-nav {
     margin: 0 0 0 75px;
     padding: 0;
@@ -357,6 +361,7 @@ header {
           color: $accent-color;
         }
       }
+
     }
   }
   .header-nav {
@@ -827,7 +832,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, .fa-hand-dots, .fa-shrimp, .fa-children {
+      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, .fa-hand-dots, .fa-shrimp, .fa-children, .fa-music {
         font-size: 14px;
         position: absolute;
         top: 50%;
